2005-02-04  Rodney Dawes  <dobey@novell.com>

	* e-passwords.c (ep_ask_password): Set the border widths for the
	dialog containers to be HIG compliant
	Fix the padding/spacing on the internal vbox to be HIG compliant

2005-01-27  Mengjie Yu  <meng-jie.yu@sun.com>

	* e-request.c: (e_request_string):add a11y description for the
	entry.

2005-01-26  Jeffrey Stedfast  <fejj@novell.com>

	* e-config.c (ech_check): If the plugin isn't enabled, return TRUE
	so that the suer doesn't get locked in one of the account druid
	pages.

2005-01-21  JP Rosevear  <jpr@novell.com>

	Fixes #46404
	
	* Makefile.am: build new files

	* e-print.[hc]: print related config and dialog routines

2005-01-17  Rodrigo Moya <rodrigo@novell.com>

	* e-url.[ch]:
	* Makefile.am: removed e-url.[ch], which are now in libedataserver.

2005-01-08  Not Zed  <NotZed@Ximian.com>

	* e-url.c (e_url_shroud): dont' use '%.*s' for truncating string
	output.

2005-01-09  JP Rosevear  <jpr@novell.com>

	* e-url.c (e_uri_new): fix parsing of query string

2005-01-07  Rodrigo Moya <rodrigo@novell.com>

	* e-categories-config.c (e_categories_config_open_dialog_for_entry):
	set the dialog's parent.

2005-01-07  Rodrigo Moya <rodrigo@novell.com>

	* e-categories-config.c (e_categories_config_open_dialog_for_entry):
	use the new ECategoriesDialog in libedataserverui.

2005-01-06  Rodney Dawes  <dobey@novell.com>

	* e-config.c (e_config_create_window): Add the GTK_DIALOG_NOSEPARATOR
	flag, and set appropriate border widths around the main dialog vbox,
	and action area, to be more HIG compliant

2005-01-06  JP Rosevear  <jpr@novell.com>

	* e-error-tool.c (main): use the base name only, so if a full path
	is passed to us we still write out to the current directory, for
	when builddir != srcdir
	
2005-01-04  Rodrigo Moya <rodrigo@novell.com>

	* e-categories-config.[ch]: removed most of the API. The rest will
	be removed as the GAL dependencies are sorted out.

2004-12-22  Not Zed  <NotZed@Ximian.com>
